--- a/Risk Factors for Suicide.ipynb
+++ b/Risk Factors for Suicide.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "The value of life is priceless. However, each year, more than 40,000 people die by suicide in United States. Suicide is a major public health concern and is the 10th leading cause of death in the US. \n",
+    "The value of life is priceless. However, each year, more than 40,000 people die by suicide in United States. Suicide is a major public health concern and is the 10th leading cause of death in the US.[1]:<> \n",
     "\n",
-    "Luckily, suicide is preventable. Knowing risk factors for suicide can help prevent suicide. Risk factors for suicide are those characteristics associated with suicide, characteristics that make it more likely that individuals will consider, attempt, or die by suicide. They might not be direct causes.\n",
+    "Luckily, suicide is preventable. Knowing risk factors for suicide can help prevent suicide. Risk factors for suicide are those characteristics associated with suicide, characteristics that make it more likely that individuals will consider, attempt, or die by suicide. They might not be direct causes.[2]:<>\n",
     "\n",
     "This project explored single factor such as sex, age, marital status and the intersecting combination of them to see are those characteristics associated with suicide.\n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "## Background\n",
     "\n",
-    "Suicide is defined as death caused by self-directed injurious behavior with intent to die as a result of the behavior. Suicide is a major public health concern and it’s among the leading causes of death in the United States.Risk factors for suicide are those characteristics associated with suicide, characteristics that increase the likelihood a individual will die by suicide. They might not be direct causes.\n",
+    "Suicide is defined as \"death caused by self-directed injurious behavior with intent to die as a result of the behavior\". Suicide is \"a major public health concern and it’s among the leading causes of death in the United States\".[3]:<>Risk factors for suicide are \"those characteristics associated with suicide\", characteristics that increase the likelihood a individual will die by suicide. \"They might not be direct causes\".[2]:<>\n",
     "\n",
     "Many researches have been done to explore the risk factors for suicide. Thoes researches stated some interesting conclusions including that men are more likely to suicide than women, teenagers are more likely to suicide, marital status and education can influence suicide etc. To verify those conclusions, this project explored single factor such as sex, age, marital status to see if they are associated with suicide. \n",
     "\n",
@@ -312,7 +312,7 @@
    "source": [
     "We can see from the numbers and chart above, the suicide ratio of men is more than three times as much as women. So **it's true that men overall are more likely to suicide than women**.\n",
     "\n",
-    "But why that happens? Are men easier to be impulsive? Are men faced at more pressure in sociaty than women? [Prof. Gopikrishna Deshpande](https://loop.frontiersin.org/people/75947/overview) and his team from Auburn University in USA found there are four traits defined as “the acquired capability for suicide” which men are more likely to have than women. The traits are fearlessness of death, pain tolerance, emotional stoicism and sensation seeking. People experiencing a desire to commit suicide will not do so without first losing their fear of dying and developing the necessary pain tolerance to endure making a lethal attempt.\n",
+    "But why that happens? Are men easier to be impulsive? Are men faced at more pressure in sociaty than women? [Prof. Gopikrishna Deshpande](https://loop.frontiersin.org/people/75947/overview) clarified in his paper “the acquired capability for suicide” which leads men are more likely to suicide than women. The capability includes \"fearlessness of death\", \"pain tolerance\", \"emotional stoicism\" and \"sensation seeking\". [4]:<>\n",
     "\n",
     "Here is the link of Prof. Gopikrishna Deshpande's full article : [A Neural Basis for the Acquired Capability for Suicide](https://www.frontiersin.org/articles/10.3389/fpsyt.2016.00125/full)\n",
     "\n",
@@ -1189,8 +1189,7 @@
     "\n",
     "### Why is this research important?\n",
     "\n",
-    "The value of life is priceless, everyone should cherish life. However, each year, more than 40,000 people die by suicide in United States. Suicide is a major public health concern and is the 10th leading cause of death in the US.\n",
-    "Luckily, suicide is preventable. Knowing risk factors for suicide can help prevent suicide.\n",
+    "The value of life is priceless, everyone should cherish life. However, each year, more than 40,000 people die by suicide in United States. Suicide is a \"major public health concern\" and is \"the 10th leading cause of death in the US\".<sup>1</sup> Luckily suicide is preventive. Knowing risk factors for suicide can help prevent suicide.\n",
     "\n",
     "In the conclusions of this research, groups of some specific characteristics show a higher likelihood to suicide, such as sex of men, age of young, marital status of single as well as men who are young, men who are single, compared to other groups. What is found in this research can help people pay much more attention on groups who have these characteristics, which can help to prevent suicide more effeciently.\n",
     "\n",
@@ -1228,13 +1227,13 @@
     "## References\n",
     "\n",
     "\n",
-    "Suicide Statistics — AFSP : https://afsp.org/about-suicide/suicide-statistics/\n",
+    "1.Suicide Statistics — AFSP : https://afsp.org/about-suicide/suicide-statistics/\n",
     "\n",
-    "National Institutes of Health: https://www.nimh.nih.gov/health/statistics/suicide/index.shtml\n",
+    "2.CDC/National Center for Health Statistics: https://www.cdc.gov/violenceprevention/suicide/riskprotectivefactors.html\n",
     "\n",
-    "CDC/National Center for Health Statistics: https://www.cdc.gov/nchs/data_access/vitalstatsonline.htm#Mortality_Multiple\n",
+    "3.National Institutes of Health: https://www.nimh.nih.gov/health/statistics/suicide/index.shtml\n",
     "\n",
-    "Why do more men commit suicide than women? : https://blog.frontiersin.org/2016/09/26/why-do-more-men-commit-suicide-than-women/\n"
+    "4.Why do more men commit suicide than women? : https://blog.frontiersin.org/2016/09/26/why-do-more-men-commit-suicide-than-women/\n"
    ]
   },
   {
